<resources>
    <string name="app_name">TP3_Grupo_7</string>
    <string name="login_button_text">INICIAR SESIÓN</string>
    <string name="register_text">Registrarse</string>
    <string name="welcome_text">Bienvenido a parking system</string>
    <string name="subtitle_text">Inicia sesión para empezar</string>
    <string name="username_hint">Nombre de usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="password2_hint">Repetir contraseña</string>
    <string name="app_title">Parking control</string>
    <string name="nombre">Nombre</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="mi_cuenta">Mi cuenta</string>

    <!-- Cadenas añadidas para activity_registro_parqueo.xml -->
    <string name="registrar_parqueo">Registrar Parqueo</string>
    <string name="numero_matricula">Número de Matrícula</string>
    <string name="tiempo">Tiempo</string>
    <string name="cancelar_UPPERCASE">CANCELAR</string>
    <string name="registrar_UPPERCASE">REGISTRAR</string>

    <!-- Cadenas añadidas para HomeActivity.java -->
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>

    <!-- Cadenas añadidas para el drawe_menu.xml -->
    <string name="nav_parqueos">Parqueos</string>
    <string name="nav_mi_cuenta">Mi Cuenta</string>
    <string name="nav_cerrar_sesion">Cerrar Sesión</string>

    <!-- Cadena añadida para el FloatingActionButton -->
    <string name="agregar_parqueo">Agregar parqueo</string> <!-- Cadena añadida -->
</resources>
